--- a/rsdjs.html
+++ b/rsdjs.html
@@ -1,5 +1,4 @@
-<html>
-<head>
+<html><head>
     <meta charset="UTF-8">
     <title>人生倒计时</title>
     <style>
@@ -237,40 +236,35 @@
     <div class="reviews-container">
         <div class="m-3"><h3 class="text-center"> 人生倒计时</h3></div>
         <div class="review time">
-            <span class="icon-container"></span>
+            <span class="icon-container">今天已过去 18 小时</span>
             <div class="progress">
-                <div class="progress-done" data-done=""></div>
+                <div class="progress-done" data-done="77" style="width: 77%; background-color: rgb(240, 173, 78); box-shadow: rgb(240, 173, 78) -2px 2px 5px 0px;"></div>
             </div>
-            <span class="percent"></span>
+            <span class="percent">77%</span>
         </div>
         <div class="review week">
-            <span class="icon-container"></span>
+            <span class="icon-container">本周已过去 6 天</span>
             <div class="progress">
-                <div class="progress-done" data-done=""></div>
+                <div class="progress-done" data-done="85" style="width: 85%; background-color: rgb(217, 83, 79); box-shadow: rgb(217, 83, 79) -2px 2px 5px 0px;"></div>
             </div>
-            <span class="percent"></span>
+            <span class="percent">85%</span>
         </div>
         <div class="review month">
-            <span class="icon-container"></span>
+            <span class="icon-container">本月已过去 20 天</span>
             <div class="progress">
-                <div class="progress-done" data-done=""></div>
+                <div class="progress-done" data-done="64" style="width: 64%; background-color: rgb(240, 173, 78); box-shadow: rgb(240, 173, 78) -2px 2px 5px 0px;"></div>
             </div>
-            <span class="percent"></span>
+            <span class="percent">64%</span>
         </div>
         <div class="review year">
-            <span class="icon-container"></span>
+            <span class="icon-container">今年已过去 6 个月 零 20 天</span>
             <div class="progress">
-                <div class="progress-done" data-done=""></div>
+                <div class="progress-done" data-done="50" style="width: 50%; background-color: rgb(91, 192, 222); box-shadow: rgb(91, 192, 222) -2px 2px 5px 0px;"></div>
             </div>
-            <span class="percent"></span>
+            <span class="percent">50%</span>
         </div>
-        <div class="review festival">
-            <span class="icon-container"></span>
-            <div class="progress">
-                <div class="progress-done" data-done=""></div>
-            </div>
-            <span class="percent"></span>
-        </div>
+        
+
     </div>
 
     <script>
@@ -332,5 +326,6 @@
 
         });
     </script>
-</body>
-</html>
+
+
+</body></html>
